--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
       <scope>test</scope>
     </dependency>
 
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.6</version>
+      </dependency>
+
+
   </dependencies>
 
 
