--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,18 @@
           </dependency>
 
           <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-c3p0 -->
-          <dependency>
-              <groupId>org.hibernate</groupId>
-              <artifactId>hibernate-c3p0</artifactId>
-              <version>5.2.12.Final</version>
-          </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-c3p0</artifactId>
+            <version>5.2.12.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+
 
   </dependencies>
 
