Data classes all changed to timestamp Some changes to validation process (still doesn't work properly) First approaches tovisualization process via jsp Added mapping for User entity-class

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -61,5 +61,16 @@
         <url-pattern>/signin</url-pattern>
     </servlet-mapping>
 
+    <!--jsp-->
+    <servlet>
+        <servlet-name>myjsp</servlet-name>
+        <jsp-file>/WEB-INF/MainPageVisualizer.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>myjsp</servlet-name>
+        <url-pattern>/myjsp</url-pattern>
+    </servlet-mapping>
+
 
 </web-app>
