--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,34 +16,16 @@
     
     <servlet>
         <servlet-name>EducationSphereServlet</servlet-name>
-        <servlet-class>controller.sphereservlets.EducationSphereServlet</servlet-class>
+        <servlet-class>controller.EducationServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>EducationSphereServlet</servlet-name>
         <url-pattern>/education/*</url-pattern>
     </servlet-mapping>
-
-    <servlet>
-        <servlet-name>SocialSphereServlet</servlet-name>
-        <servlet-class>controller.sphereservlets.SocialSphereServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SocialSphereServlet</servlet-name>
-        <url-pattern>/social/*</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>SportSphereServlet</servlet-name>
-        <servlet-class>controller.sphereservlets.SportSphereServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SportSphereServlet</servlet-name>
-        <url-pattern>/sport/*</url-pattern>
-    </servlet-mapping>
     
     <servlet>
         <servlet-name>NewsServlet</servlet-name>
-        <servlet-class>controller.NewsServlet</servlet-class>
+        <servlet-class>controller.PostsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>NewsServlet</servlet-name>
