--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,18 @@
         </session-timeout>
     </session-config>
 
+
+    <filter>
+        <filter-name>URLRewritingFilter</filter-name>
+        <filter-class>controller.URLRewritingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>URLRewritingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+
+
     <welcome-file-list>
         <welcome-file>MainPageServlet</welcome-file>
     </welcome-file-list>
