--- a/pom.xml
+++ b/pom.xml
@@ -25,17 +25,26 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-c3p0</artifactId>
-            <version>5.2.12.Final</version>
+            <version>5.2.13.Final</version>
         </dependency>
-
+<!--5 1 12-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.7</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-servlet-api -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+            <version>9.0.4</version>
+            <scope>provided</scope>
+        </dependency>
 
-  </dependencies>
+
+
+    </dependencies>
 
 
 
