--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,10 +16,24 @@
 
     <filter>
         <filter-name>URLRewritingFilter</filter-name>
-        <filter-class>controller.URLRewritingFilter</filter-class>
+        <filter-class>controller.filters.URLRewritingFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>URLRewritingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>AuthorisationFilter</filter-name>
+        <filter-class>controller.filters.AuthorisationFilter</filter-class>
+        <init-param>
+            <param-name>CookieName</param-name>
+            <param-value>petrmylyubimiypetr</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthorisationFilter</filter-name>
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
@@ -93,7 +107,27 @@
         <url-pattern>/albums/*</url-pattern>
     </servlet-mapping>
     
-
+    <servlet>
+        <servlet-name>FileDownloadingServlet</servlet-name>
+        <servlet-class>controller.FileDownloadingServlet</servlet-class>
+        <init-param>
+            <param-name>fileUploadingRoot</param-name>
+            <param-value>/Users/ilya_ermakov/Desktop/image</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>FileDownloadingServlet</servlet-name>
+        <url-pattern>/file/*</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>AddPostServlet</servlet-name>
+        <servlet-class>controller.addition.AddPostServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AddPostServlet</servlet-name>
+        <url-pattern>/addPost</url-pattern>
+    </servlet-mapping>
     <!--jsp-->
 
 
