--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.9.2</version>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.1</version>
         </dependency>
 
 
