Final visualization of Schedule - Pair-subject - Sufficient JSP realization
Some fixes with post files - need to do the same with HW

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -154,7 +154,7 @@
     
     <!--<servlet>-->
         <!--<servlet-name>utils.filemanagement.FileDownloadingServlet</servlet-name>-->
-        <!--<servlet-class>controller.utils.filemanagement.FileDownloadingServlet</servlet-class>-->
+        <!--<servlet-class>utils.filemanagement.FileDownloadingServlet</servlet-class>-->
         <!--<init-param>-->
             <!--<param-name>fileUploadingRoot</param-name>-->
             <!--<param-value>/Users/ilya_ermakov/Desktop/image</param-value>-->
