First implementation of image scaling mechanism  - all images are first transformed into jpg  - then compressed with no quality loss  - a thumbnail with a square thumbnail are created  - 3 images are saved in total
Made one common entity AttachedAlbum for usage in HW and Posts

Major changes in mappings
 - many-to-many association owner SHOULD NOT have "inverse" attribute

Started working on Resources section in Education
 - created classes ResourceItem and SubjectResourceCategory

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -241,4 +241,17 @@
         <!--<location>/shiiiiit.html</location>-->
     <!--</error-page>-->
 
+    <servlet>
+        <servlet-name>addPhotosServlet</servlet-name>
+        <servlet-class>sections.feed.AddPhotosServlet</servlet-class>
+        <init-param>
+            <param-name>pathToImageFolder</param-name>
+            <param-value>/Users/ilya_ermakov/Desktop/images</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>addPhotosServlet</servlet-name>
+        <url-pattern>/uploadImage</url-pattern>
+    </servlet-mapping>
+
 </web-app>
