--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -228,6 +228,29 @@
         <servlet-name>EduPageServlet</servlet-name>
         <url-pattern>/edu</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>AddHomeworkServlet</servlet-name>
+        <servlet-class>sections.education.homework.AddHomeworkServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AddHomeworkServlet</servlet-name>
+        <url-pattern>/edu/hw/add</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>AddFilesToHWServlet</servlet-name>
+        <servlet-class>sections.education.homework.AddFilesToHWServlet</servlet-class>
+        <init-param>
+            <param-name>pathToHWfiles</param-name>
+            <param-value>/Users/ilya_ermakov/Desktop/files</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AddFilesToHWServlet</servlet-name>
+        <url-pattern>/files/edu/hw/add</url-pattern>
+    </servlet-mapping>
+
     <!--end education-->
 
     <!--error pages-->
@@ -253,5 +276,17 @@
         <servlet-name>addPhotosServlet</servlet-name>
         <url-pattern>/uploadImage</url-pattern>
     </servlet-mapping>
+
+
+
+
+    <!--<error-page>-->
+        <!--<error-code>400</error-code>-->
+        <!--<location>/exceptionError</location>-->
+    <!--</error-page>-->
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/exceptionError</location>
+    </error-page>
 
 </web-app>
